[package]
description = "https://www.fit-portal.go.jp/PublicInfo"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "rust-fit-portal-scraper"
repository = "https://github.com/wakame1367/rust-fit-portal-scraper"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
scraper = "0.16.0"
tempfile = "3.5.0"
tokio = {version = "1.29.1", features = ["full"]}
url = "2.3.1"

[dev-dependencies]
httpmock = "0.6"
